--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/micro_ros_msgs
-	previous = 
-	base = aeb605d
+	previous = aeb605d
+	base = c9949e1
 	trim = 
 	trimbase = 
