--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/micro_ros_msgs
-	previous = 
-	base = 02eb71b
+	previous = 02eb71b
+	base = aa39759
 	trim = 
 	trimbase = 
